--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -15,6 +15,7 @@ body {
 }
 .contact-form {
   display: flex;
+  gap: 20px;
   justify-content: space-between;
   max-width: 600px;
   margin: 20px;
@@ -25,7 +26,6 @@ ul {
 }
 
 .form-group {
-  flex: 1; /* Each input takes equal space */
   margin-right: 20px; /* Space between the two inputs */
 }
 
@@ -51,24 +51,26 @@ ul {
 }
 .query-group {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-between 10px;
   max-width: 600px;
   margin: 20px;
 }
 .general-group {
+  padding: 5px;
   display: flexbox;
-  width: 150px;
+  width: 100%;
   height: 25px;
-  margin: 15px;
-  border: 1px solid rgb(131, 128, 128);
+  margin: 10px;
+  border: 1px solid #ccc;
   border-radius: 8px;
 }
 .support-group {
+  padding: 5px;
   display: flexbox;
-  width: 150px;
+  width: 100%;
   height: 25px;
-  margin: 15px;
-  border: 1px solid rgb(118, 116, 116);
+  margin: 10px;
+  border: 1px solid #ccc;
   border-radius: 8px;
 }
 .message-group input {
@@ -77,8 +79,9 @@ ul {
   border: 1px solid #ccc; /* Add a border */
   border-radius: 8px; /* Adjust this value for more or less curvature */
 }
-.button {
-  background-color: #04aa6d; /* Green */
+button {
+  width: 100%;
+  background-color: #04aa6d;
   border: 10px;
   border-radius: 8px;
   color: rgb(255, 255, 255);
@@ -87,4 +90,20 @@ ul {
   text-decoration: solid;
   display: block;
   font-size: 16px;
+}
+.error-message {
+  color: red;
+  font-size: 12px;
+}
+
+.success-message {
+  background-color: #d4edda;
+  color: #155724;
+  padding: 10px;
+  margin: 20px 0;
+  border: 1px solid #c3e6cb;
+  border-radius: 5px;
+}
+.pic {
+  display: none;
 }
